[package]
name = "mtime-travel"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A small tool to save and restore the mtime attribute for files."
repository = "https://github.com/ClementTsang/cargo-mtime-travel"
keywords = ["cargo", "mtime"]
categories = ["caching", "command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
anyhow = "1.0.76"
clap = { version = "4.4.11", features = ["derive"] }
data-encoding = "2.5.0"
filetime = "0.2.23"
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.8"
walkdir = "2.4.0"

[dev-dependencies]
assert_cmd = "2.0.12"

[profile.release]
debug = 0
strip = "symbols"
lto = true
opt-level = 3
codegen-units = 1

[lints.rust]
rust_2018_idioms = "deny"
missing_docs = "deny"
unused_extern_crates = "deny"

[lints.rustdoc]
broken_intra_doc_links = "deny"
missing_crate_level_docs = "deny"

[lints.clippy]
todo = "deny"
unimplemented = "deny"
missing_safety_doc = "deny"
